--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,10 @@
 # Delphi history and backups
 __history/
 __recovery/
+Win32/
+Win64/
+Android64/
+Android32/
 *.~*
 
 # Castalia statistics file (since XE7 Castalia is distributed with Delphi)
