--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,7 @@ Win32/
 Win64/
 Android64/
 Android32/
+Android/
 *.~*
 
 # Castalia statistics file (since XE7 Castalia is distributed with Delphi)
