--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,7 @@ Win64/
 Android64/
 Android32/
 Android/
+Project/
 *.~*
 
 # Castalia statistics file (since XE7 Castalia is distributed with Delphi)
